syntax = 'proto3';

package protobuf;

option go_package = ".;protobuf";

service RequestAnalysis {
    rpc SendHASAnalysis (HASInfo) returns (ResponseHAS) {}
    rpc SendLBAnalysis (LBInfo) returns (ResponseLB) {}
}

message HASInfo {
    string HPAName = 1;
    string HPANamespace = 2;
    string ClusterName = 3;
}
message ResponseHAS {
    string TargetCluster = 1;
}

message LBInfo {
    repeated string ClusterNameList = 1;
    string ClientIP = 2;
}

message ResponseLB {
     map<string,double> ScoreMap = 1;
}
